--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 body {
 	font-family: 'Montserrat', sans-serif;
-	background-color: whitesmoke;
+	background-color: ghostwhite;
 	position: relative;
 	padding-bottom: 75px;
 }
@@ -50,16 +50,21 @@ li span {
 	position: relative;
 	padding-top: 80px;
 	padding-bottom: 80px;
-	background-color: #33cc33;
+	
+	/* 
+	background: rgb(0, 153, 0); */
+	background: url("https://www.phyramid.com/blog/content/images/2014/11/header-background-indexed.png");
 	text-align: center;
 }
 #skills{
 	position: absolute;
+	color: gray;
 	bottom: 0px;
 	left: 0px;
 	width: 100%;
 	text-align: center;
 	font-size: 1.5rem;
+	text-shadow: -4px 6px 15px black;
 }
 #header h1 {
 	font-size: 2.5rem;
@@ -194,8 +199,8 @@ hr{
 		transform: scale(1.3)
 	}
 	#header{
-		padding-top: 90px;
-		padding-bottom: 90px;
+		padding-top: 100px;
+		padding-bottom: 100px;
 	}
 	#header h1 {
 		font-size: 4.5rem;
@@ -267,8 +272,8 @@ hr{
 	}
 
 	#header{
-		padding-top: 110px;
-		padding-bottom: 110px;
+		padding-top: 90px;
+		padding-bottom: 90px;
 	}
 	#header h1 {
 		font-size: 7rem;
