--- a/styles/main.css
+++ b/styles/main.css
@@ -11,33 +11,58 @@ body {
 }
 #nav-area {
 	min-height: 5rem;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: row;
+	-ms-flex-direction: row;
 	flex-direction: row;
+	-webkit-justify-content: space-around;
+	-ms-flex-pack: distribute;
 	justify-content: space-around;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
 	align-items: center;
 }
 #nav-area ul{
 	margin-bottom: 0px;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-justify-content: space-around;
+	-ms-flex-pack: distribute;
 	justify-content: space-around;
 	width: 60%;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
 	align-items: center;
 }
 #nav-area li {
 	text-decoration: none;
 	list-style: none;
+	-webkit-box-flex: 2;
+	-webkit-flex-grow: 2;
+	-ms-flex-positive: 2;
 	flex-grow: 2;
 }
 li span {
 	display: block;
 	padding: .5rem;
 	color: #333;
+	-webkit-transition-duration: .4s;
 	transition-duration: .4s;
 }
 .ion-email,.ion-social-facebook,.ion-social-github,.ion-social-linkedin {
 	font-size: 1.7rem;
 }
 .ion-email:hover,.ion-social-facebook:hover,.ion-social-github:hover,.ion-social-linkedin:hover {
+	-webkit-transform: scale(1.6);
 	transform: scale(1.6)
 }
 .h2-div {
@@ -149,7 +174,13 @@ hr{
 .section-left {display: none;}
 #form-container {
 	width: 100%;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
 	justify-content: center;
 	margin-top: 5px;
 	text-align: center;
@@ -173,6 +204,9 @@ hr{
 .buttons_reverse{
 	background-color: antiquewhite;
 }
+#skills {
+	color: #99e600;
+}
 
 @media(min-width: 500px){
 	#form {
@@ -185,6 +219,9 @@ hr{
 	}
 
 	#nav-area ul{
+		-webkit-box-pack: end;
+		-webkit-justify-content: flex-end;
+		-ms-flex-pack: end;
 		justify-content: flex-end;
 	}
 
@@ -196,6 +233,7 @@ hr{
 		font-size: 2.3rem;
 	}
 	.ion-email:hover,.ion-social-facebook:hover,.ion-social-github:hover,.ion-social-linkedin:hover {
+		-webkit-transform: scale(1.3);
 		transform: scale(1.3)
 	}
 	#header{
@@ -233,33 +271,55 @@ hr{
 	}
 
 	#nav-area ul{
+		-webkit-box-pack: end;
+		-webkit-justify-content: flex-end;
+		-ms-flex-pack: end;
 		justify-content: flex-end;
 	}
 	.form-container {
 		width: 70%;
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
 		display: flex;
+		-webkit-box-orient: horizontal;
+		-webkit-box-direction: normal;
+		-webkit-flex-direction: row;
+		-ms-flex-direction: row;
 		flex-direction: row;
+		-webkit-box-pack: justify;
+		-webkit-justify-content: space-between;
+		-ms-flex-pack: justify;
 		justify-content: space-between;
 		margin: 0 auto;
 		left: 600px;
+		-webkit-transition-property: left;
 		transition-property: left;
+		-webkit-transition-duration: 2s;
 		transition-duration: 2s;
+		padding: 0 14% 0 8%;
 	}
 	#form {
 		position: relative;
-		left: 600px;
+		left: 800px;
+		-webkit-transition-property: left;
 		transition-property: left;
-		transition-duration: .9s;
-		transition-timing-function: ease-out;
+		-webkit-transition-duration: 1.4s;
+		transition-duration: 1.4s;
+		-webkit-transition-timing-function: cubic-bezier(0, 0, 0.19, 1.51);
+		transition-timing-function: cubic-bezier(0, 0, 0.19, 1.51);
 	}
 	.section-left {
 		position: relative;
 		display: inline-block;
 		width: 60%;
 		left: -600px;
+		-webkit-transition-property: left;
 		transition-property: left;
-		transition-duration: .9s;
-		transition-timing-function: ease-out;
+		-webkit-transition-duration: 1.4s;
+		transition-duration: 1.4s;
+		-webkit-transition-timing-function: cubic-bezier(0, 0, 0.19, 1.51);
+		transition-timing-function: cubic-bezier(0, 0, 0.19, 1.51);
 	}
 	#contact{
 		display: none;
@@ -271,9 +331,11 @@ hr{
 		border-radius: 50% 50%;
 	}
 	.section-left p {
-		margin-top: 2rem;
 		font-size: 3rem;
 		width: 300px;
+		text-align: center;
+		margin: 0 auto;
+		margin-top: 2rem;
 	}
 	.form {
 		width: 30%;
